# robot_portfolio

./: .gitignore  README.md
v_beta/: .coverage  LightPath_ An Open-Source Route Optimization Engin.md  State-of-the-Art Robotic Arm Configuration and Con.md  check_env.py  check_imports.py  coverage.xml  pytest.ini  pytest_check.py  requirements-robot.txt  requirements-test.txt  run_tests.bat  run_tests_py.py  setup.py  setup_robot_sim.py  simple_test.py  test_imports.py  test_simple.py  verify_env.py
v_beta/.hypothesis/constants/: ca817dfc35bd22d6  dc782b3a1bb17134
v_beta/robot_arm_simulator/: README.md  requirements.txt  setup.py
v_beta/robot_arm_simulator/config/: simulation.yaml
v_beta/robot_arm_simulator/src/robot_arm_simulator/config/: config_loader.py
v_beta/robot_arm_simulator/src/robot_arm_simulator/control/: trajectory_planner.py
v_beta/robot_arm_simulator/src/robot_arm_simulator/grippers/: __init__.py  base_gripper.py  (+1 more)
v_beta/src/lightpath/: README.md  basic_use.md  basic_use.py  core.py
v_beta/src/robot_arm/: README.md  __init__.py  demo.md  demo.py  demo_conveyor.md  demo_conveyor.py  demo_pendant.md  demo_pendant.py  download_models.md  download_models.py  grippers.md  grippers.py  main.md  main.py  production_line.md  production_line.py  robot.md  robot.py  robot_config.md  robot_config.py  ur5_robot.md  ur5_robot.py
v_beta/src/robot_arm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
v_beta/src/robot_arm_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
v_beta/src/robot_arm_simulator/examples/: advanced_production_line.md  advanced_production_line.py  basic_demo.md  basic_demo.py  production_line_demo.md  production_line_demo.py
v_beta/tests/: conftest.py  test_demo.py  test_main.py  test_simple.py  test_smoke.py
v_beta/tests/lightpath/: test_basic_use.py  test_core.py
v_beta/tests/robot_arm/: __init__.py  conftest.py  test_demo.py  test_grippers.py  test_main.py  test_production_line.py  test_robot.py  test_ur5_robot.py
v_gamma/: .coveragerc  .gitignore  Makefile  README.md  TEST_SUMMARY.md  pyproject.toml  run_tests.py
v_gamma/examples/: README.md  basic_demo.py  production_demo.py
v_gamma/tests/: __init__.py  conftest.py  test_base_scenario.py  test_cli.py  test_engine.py  test_environment.py  test_init.py  test_pick_place.py  test_production_line.py  test_robot.py  test_scenarios.py  test_utils.py
(+12 files in other folders)
